--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Javascript User interface for a fully customized autocomplete search.",
   "main": "./dist/apisearch-autocomplete.js",
   "scripts": {
-    "examples": "webpack-dev-server --content-base examples/ --port 1234 --history-api-fallback index.html",
+    "examples": "webpack-dev-server --config webpack.dev.js --content-base dist --port 1234",
     "dev": "webpack --config ./webpack.dev.js --progress --colors --watch",
     "test": "jest --config jest.config.js",
     "build": "webpack --config ./webpack.dev.js",
